# fast_api_excahnge_app

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  fixtures.py  main.py
app/data/: currencies.py  exchange_rates.py
app/exchange/: models.py  repository.py  routes.py  schemas.py  services.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  init.sh
