[tool.poetry]
name = "currency-conversion"
version = "0.1.0"
description = "Simple currency conversion API"
authors = ["Gheorghe Mirca"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"
ruff = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"